<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    >

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/women1"
        android:contentDescription="@string/imageView" />

    <Button
        android:id="@+id/request_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/request_napkin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view" />

    <TextView
        android:id="@+id/use_of_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_use_the_app"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/request_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_margin="20dp"
        android:padding="5dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/volunteer_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volunteer"
        app:layout_constraintTop_toBottomOf="@id/use_of_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/switch_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/volunteer_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>